welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:9: error: not found: value prendreBiscuit
  prendreBiscuit()
  ^DwarfCode:17: error: not found: value poserBiscuit
  poserBiscuit()
  ^